@@ -1,3 +1,7 @@
+2010-06-10 Susanne Moog <typo3@susanne-moog.de>
+
+	* Added feature #8778: Add possibility to disable TYPO3 draft workspace by localconf.php configuration (Thanks to Sonja Scholz)
+
 2010-06-10 Francois Suter  <francois@typo3.org>
 
 	* Fixed bug #14685: Some status reports classes have wrong XCLASS inclusion (thanks to Peter Niederlag)
